@@ -61,8 +61,6 @@ uninstall-local:
 
 endif # INSTALL_CLASS_FILES
 
-.PHONY: genclasses
-
 if USE_PREBUILT_GLIBJ_ZIP
 
 glibj.zip:
@@ -99,19 +97,19 @@ resources: copy-vmresources.sh
 	done
 	touch resources
 
-classes: genclasses
-
 $(top_builddir)/gnu/java/locale/LocaleData.java: $(top_srcdir)/scripts/generate-locale-list.sh 
 	@mkdir_p@ $(top_builddir)/gnu/java/locale
 	$(top_srcdir)/scripts/generate-locale-list.sh > $(top_builddir)/gnu/java/locale/LocaleData.java
 
 genclasses: gen-classlist.sh standard.omit $(top_builddir)/gnu/java/locale/LocaleData.java gen-xpath-parser
 	top_builddir=$(top_builddir) top_srcdir=$(top_srcdir) $(SHELL) ./gen-classlist.sh standard
+	touch genclasses
 
 # Only rebuild parsers when explicitly asked to.
 if REGEN_PARSERS
 
 gen-xpath-parser: $(top_srcdir)/gnu/xml/xpath/XPathParser.java
+	touch gen-xpath-parser
 
 $(top_srcdir)/gnu/xml/xpath/XPathParser.java: $(top_srcdir)/gnu/xml/xpath/XPathParser.y
 	( cd $(top_srcdir)/gnu/xml/xpath; \
@@ -119,7 +117,7 @@ $(top_srcdir)/gnu/xml/xpath/XPathParser.java: $(top_srcdir)/gnu/xml/xpath/XPathP
 else
 
 gen-xpath-parser:
-	true
+	touch gen-xpath-parser
 
 endif # REGEN_PARSER
 
@@ -137,13 +135,13 @@ $(JAVA_DEPEND): genclasses
 #	  top_srcdir=$(top_srcdir)
 #   	  touch compile-classes
 #else
-compile-classes: classes $(JAVA_SRCS) Makefile
+compile-classes: genclasses $(JAVA_SRCS) Makefile
 	$(JCOMPILER)
 	touch compile-classes
 #endif
 
 EXTRA_DIST = standard.omit.in mkcollections.pl.in Makefile.gcj split-for-gcj.sh glibj.zip
-CLEANFILES = compile-classes resources classes \
+CLEANFILES = compile-classes resources classes genclasses gen-xpath-parser \
 	glibj.zip classes.1 classes.2 Makefile.deps \
 	$(top_builddir)/gnu/java/locale/LocaleData.java \
 	$(JAVA_DEPEND)
