@@ -1,3 +1,15 @@
+2014-04-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	Fix issues with parallel make.
+	* lib/Makefile.am:
+	(.PHONY): Remove genclasses; no longer phony.
+	(classes): Remove.
+	(genclasses): Touch genclasses to mark completion.
+	(gen-xpath-parser): Touch gen-xpath-parser to mark
+	completion.
+	(compile-classes): Depend on genclasses directly.
+	(CLEANFILES): Remove gen-xpath-parser and genclasses.
+
 2013-09-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/lang/model/SourceVersion.java:
